# freertos-blink-howto

./: .gitignore  CMakeLists.txt  README.md
local-config/FreeRTOS-Kernel/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.cpp
